--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue": "^2.5.2",
+    "vue-html5-editor": "^1.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
