--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue": "^2.5.2",
-    "vue-html5-editor": "^1.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -83,7 +82,8 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
-    "vue-quill-editor": "^3.0.6"
+    "vue-quill-editor": "^3.0.6",
+    "vue-html5-editor": "^1.1.1"
   },
   "engines": {
     "node": ">= 6.0.0",
