--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cross-env": "^5.1.4",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.11",
+    "dayjs": "^1.6.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
